@@ -2,13 +2,13 @@
 (function(global) {
 
   // private vars
-  var Fuse, Bug, Data, Element, Feature, Form, Func, Obj, Node, NodeList,
-   $break, _extend, addListMethods, bind, capitalize, clone, concatList,
-   decorate, defer, eachKey, emptyFunction, escapeRegExpChars, expando,
-   getDocument, getNodeName, getWindow, hasKey, inspect, isArray, isElement,
-   isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive, isRegExp,
-   isSameOrigin, isString, isUndefined, K, nil, prependList, slice, toInteger,
-   toString, undef, userAgent;
+  var Fuse, Bug, Data, Element, Enumerable, Feature, Form, Func, Obj, Node,
+   NodeList, $break, _extend, addListMethods, bind, capitalize, clone,
+   concatList, decorate, defer, eachKey, emptyFunction, escapeRegExpChars,
+   expando, getDocument, getNodeName, getWindow, hasKey, inspect, isArray,
+   isElement, isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive,
+   isRegExp, isSameOrigin, isString, isUndefined, K, nil, prependList, slice,
+   toInteger, toString, undef, userAgent;
 
   Fuse =
   global.Fuse = function Fuse() { };
